--- a/test.html
+++ b/test.html
@@ -1,71 +1,89 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#2196f3">
-    <title>My App</title>
-    <link rel="stylesheet" href="framework7/css/framework7.min.css">
-    <link rel="stylesheet" href="framework7/css/framework7.md.min.css">
-    <link rel="stylesheet" href="css/framework7-icons.css">
-  </head>
-  <body>
-    <!-- App root element -->
-    <div id="app">
-      <div class="panel panel-left panel-reveal">
-        <p>lorem ipsum...</p>
-        <div class="list links-list no-hairlines">
-          <ul>
-            <li>
-              <a href="/about/">About</a>
-            </li>
-            <li>
-              <a href="#">Link Item 2</a>
-            </li>
-            <li>
-              <a href="#">Link Item 3</a>
-            </li>
-          </ul>
-        </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#2196f3">
+  <title>My App</title>
+  <link rel="stylesheet" href="framework7/css/framework7.min.css">
+  <link rel="stylesheet" href="framework7/css/framework7.md.min.css">
+  <link rel="stylesheet" href="css/framework7-icons.css">
+</head>
+
+<body>
+  <!-- App root element - side menu -->
+  <div id="app">
+    <div class="panel panel-left panel-reveal">
+      <p>I will change this to see if it work!</p>
+      <div class="list links-list no-hairlines">
+        <ul>
+          <li>
+            <a href="/about/">About</a>
+          </li>
+
+          <li>
+            <a href="/link1/">Link1</a>
+          </li>
+          <li>
+            <a href="/daily_summary/">Daily Summary</a>
+          </li>
+          <li>
+            <a href="/booking_source/">Available Tables</a>
+          </li>
+          <li>
+            <a href="/current_operations/">Available Tables</a>
+          </li>
+          <li>
+            <a href="/top_nationalities/">Available Tables</a>
+          </li>
+          <li>
+            <a href="/messages/">Available Tables</a>
+          </li>
+        </ul>
       </div>
+    </div>
 
-      <!-- Statusbar overlay -->
-      <div class="statusbar"></div>
+    <!-- Statusbar overlay -->
+    <div class="statusbar"></div>
 
-      <!-- Your main view, should have "view-main" class -->
-      <div class="view view-main">
-        <!-- Initial Page, "data-name" contains page name -->
-        <div data-name="home" class="page">
+    <!-- Your main view, should have "view-main" class -->
+    <div class="view view-main">
+      <!-- Initial Page, "data-name" contains page name -->
+      <div data-name="home" class="page">
 
-          <!-- Top Navbar -->
-          <div class="navbar">
-              <div class="navbar-inner">
-                  <div class="left">
-                      <a href="#" class="link icon-only panel-open"><i class="f7-icons">more_vertical</i></a>
-                  </div>
-                  <div class="title">Page Title</div>
-              </div>
-          </div>
-
-          <!-- Toolbar -->
-          <div class="toolbar toolbar-bottom-md">
-            <div class="toolbar-inner">
-              <a href="#" class="link">Link 1</a>
-              <a href="#" class="link">Link 2</a>
+        <!-- Top Navbar -->
+        <div class="navbar">
+          <div class="navbar-inner">
+            <div class="left">
+              <a href="#" class="link icon-only panel-open">
+                <i class="f7-icons">bars</i>
+              </a>
             </div>
+            <div class="title">Page Title</div>
           </div>
+        </div>
 
-          <!-- Scrollable page content -->
-          <div class="page-content">
-            <p>Page content goes here</p>
-            <a href="/about/">About app</a>
+        <!-- Toolbar at the bottom of the screen -->
+        <div class="toolbar toolbar-bottom-md">
+          <div class="toolbar-inner">
+            <a href="/link1/" class="link">Link 1</a>
+            <a href="#" class="link">Link 2</a>
           </div>
+        </div>
+
+        <!-- Scrollable page content ON THE MAIN PAGE -->
+        <div class="page-content">
+          <p>Page content goes here and it has now changed!</p>
+          <a href="/about/">About app</a>
         </div>
       </div>
     </div>
-    
-    <script type="text/javascript" src="framework7/js/framework7.min.js"></script>
-    <script type="text/javascript" src="js/test.js"></script>
-  </body>
+  </div>
+
+  <script type="text/javascript" src="framework7/js/framework7.min.js"></script>
+  <script type="text/javascript" src="js/test.js"></script>
+</body>
+
 </html>
