--- a/pages/login.html
+++ b/pages/login.html
@@ -6,7 +6,7 @@
     <div class="page no-navbar no-toolbar no-swipeback">
         <div class="page-content login-screen-content">
             <div class="login">My App</div>
-            <form>
+            <form class="loginForm">
                 <div class="login__row">
                     <input type="text" class="login__input name" placeholder="Username" />
                 </div>
