--- a/pages/messages.html
+++ b/pages/messages.html
@@ -28,7 +28,7 @@
     <div class="popup messages-popup">
         <div class="page-messages">
             <div class="navbar">
-                <div class=navbar-inner>
+                <div class="navbar-inner">
                     <div class="title">Add New Message</div>
                     <div class="right">
                         <a href="#" class="link icon-only popup-close">
@@ -67,6 +67,7 @@
                         </li>
                     </ul>
                 </div>
+
             </div>
         </div>
     </div>
@@ -85,20 +86,21 @@
             <div class="card-content card-content-padding">Person 2 message.</div>
             <div class="card-footer">People who like this</div>
         </div>
-        <div class="card">
-            <div class="card-header">Person3</div>
-            <div class="card-content card-content-padding">Person 3 message.</div>
-            <div class="card-footer">People who like this</div>
+
+        <!-- FAB Right Bottom (Orange) -->
+        <div class="fab fab-right-bottom">
+            <!-- FAB speed dial actions with labels -->
+            <div class="fab-buttons fab-buttons-top">
+                <a href="#" class="fab-label-button">
+                    <span>1</span>
+                    <span class="fab-label">Action 1</span>
+                </a>
+                <a href="#" class="fab-label-button">
+                    <span>2</span>
+                    <span class="fab-label">Action 2</span>
+                </a>
+            </div>
         </div>
-        <div class="card">
-            <div class="card-header">Person4</div>
-            <div class="card-content card-content-padding">Person 4 messages.</div>
-            <div class="card-footer">People who like this: </div>
-        </div>
-        <div class="card">
-            <div class="card-header">Person5</div>
-            <div class="card-content card-content-padding">Person 5 message.</div>
-            <div class="card-footer">People who like this</div>
-        </div>
+
     </div>
 </div>
