--- a/test.html
+++ b/test.html
@@ -32,11 +32,12 @@
 
 
         <!-- Scrollable page content ON THE MAIN PAGE - this is where the daily summary stuff would go -->
-        <div class="page-content">
+        <div class="backgroundimg ">
+          <div class="backgroundimg"></div>
           <div class="page no-navbar no-toolbar no-swipeback">
             <div class="page-content login-screen-content">
               <div class="login">My App</div>
-              <form>
+              <form class="loginForm">
                 <div class="login__row1">
                   <input type="text" id="login__input__email" placeholder="Username" />
                 </div>
